--- a/secondpage.html
+++ b/secondpage.html
@@ -1,10 +1,5 @@
-<title>About My Company</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' href='./style.css'>
-  <link rel='stylesheet' type='text/css' href='./secondStyle.css'>
-  <!-- <link rel='stylesheet' type='text/css' href='./secondStyle.css'> -->
-  <!-- <script src='main.js'></script> -->
-  <style>
+<title>About My Company</title>  
+<style>
     p {
       color: blue;
     }
@@ -29,8 +24,8 @@
 </div>
 
 
-<div class="number-three"> <p>I love to code</p></div>
-<div class="number-three "> <p class="red-font-color">I love listening to music</p></div>
+<div class="number-three"> <p>- I love to code</p></div>
+<div class="number-three "> <p>- I love listening to music</p></div>
 <div class="number-three"> <p>Tech is fun</p></div>
 
 
